feat: tome sofn--archforge